@@ -315,15 +315,28 @@ void VlRNG::srandom(uint64_t n) VL_MT_UNSAFE {
     if (VL_COUNTONES_I(m_state[0]) < 10) m_state[0] = ~m_state[0];
     if (VL_COUNTONES_I(m_state[1]) < 10) m_state[1] = ~m_state[1];
 }
-// Unused: void VlRNG::set_randstate(const std::string& state) VL_MT_UNSAFE {
-// Unused:     if (VL_LIKELY(state.length() == sizeof(m_state))) {
-// Unused:         memcpy(m_state, state.data(), sizeof(m_state));
-// Unused:     }
-// Unused: }
-// Unused: std::string VlRNG::get_randstate() const VL_MT_UNSAFE {
-// Unused:     std::string result{reinterpret_cast<const char *>(&m_state), sizeof(m_state)};
-// Unused:     return result;
-// Unused: }
+std::string VlRNG::get_randstate() const VL_MT_UNSAFE {
+    // Though not stated in IEEE, assumption is the string must be printable
+    const char* const stateCharsp = reinterpret_cast<const char*>(&m_state);
+    static_assert(sizeof(m_state) == 16);
+    std::string result{"R00112233445566770011223344556677"};
+    for (int i = 0; i < sizeof(m_state); ++i) {
+        result[1 + i * 2] = 'a' + ((stateCharsp[i] >> 4) & 15);
+        result[1 + i * 2 + 1] = 'a' + (stateCharsp[i] & 15);
+    }
+    return result;
+}
+void VlRNG::set_randstate(const std::string& state) VL_MT_UNSAFE {
+    if (VL_UNLIKELY((state.length() != 1 + 2 * sizeof(m_state)) || (state[0] != 'R'))) {
+        VL_PRINTF_MT("%%Warning: set_randstate ignored as state string not from get_randstate\n");
+        return;
+    }
+    char* const stateCharsp = reinterpret_cast<char*>(&m_state);
+    for (int i = 0; i < sizeof(m_state); ++i) {
+        stateCharsp[i]
+            = (((state[1 + i * 2] - 'a') & 15) << 4) | ((state[1 + i * 2 + 1] - 'a') & 15);
+    }
+}
 
 static uint32_t vl_sys_rand32() VL_MT_SAFE {
     // Return random 32-bits using system library.
