@@ -3110,7 +3110,9 @@ private:
                     }
                 } else if (VN_IS(nodep, New) && m_statep->forPrearray()) {
                     // Resolved in V3Width
-                } else if (nodep->name() == "randomize" || nodep->name() == "srandom") {
+                } else if (nodep->name() == "randomize" || nodep->name() == "srandom"
+                           || nodep->name() == "get_randstate"
+                           || nodep->name() == "set_randstate") {
                     // Resolved in V3Width
                 } else if (nodep->dotted() == "") {
                     if (nodep->pli()) {
